--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -1,9 +1,10 @@
 name: container-deploy
 
-on
+on:
   push:
     branches:
       - master
+      - main
     paths:
       - 'packages/container/**'
 
