--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -14,7 +14,7 @@ defaults:
 
 jobs:
   build:
-    runs-on: ubuntu-lastest
+    runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v2
