--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -21,7 +21,7 @@ jobs:
       - run: npm install
       - run: npm run build
 
-      - uses: aws/aws-cli
+      - uses: ItsKarma/aws-cli@v1.70.0
       - run: aws s3 sync dist s3://${{ secrets.AWS_S3_BUCKET_NAME }}/container/lastest
         env:
           ACTIONS_ALLOW_UNSECURE_COMMANDS: 'true'
