--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -22,9 +22,7 @@ jobs:
       - run: npm run build
 
       - uses: ItsKarma/aws-cli@v1.70.0
-      - with:
-          args: aws s3 sync --delete --acl dist/ s3://${{ secrets.AWS_S3_BUCKET_NAME }}/container/lastest
-      - run: args
+      - run: aws s3 sync --delete --acl dist/ s3://${{ secrets.AWS_S3_BUCKET_NAME }}/container/lastest
         env:
           ACTIONS_ALLOW_UNSECURE_COMMANDS: 'true'
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
