--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -21,10 +21,10 @@ jobs:
       - run: npm install
       - run: npm run build
 
-      - uses: ItsKarma/aws-cli@v1.70.0
-      - run: aws s3 sync dist s3://${{ secrets.AWS_S3_BUCKET_NAME }}/container/latest
+      - uses: docker://amazon/aws-cli:2.0.7
         env:
           ACTIONS_ALLOW_UNSECURE_COMMANDS: true
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
+      - run: aws s3 sync dist s3://${{ecrets.AWS_S3_BUCKET_NAME }}/container/latest
