--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -21,9 +21,7 @@ jobs:
       - run: npm install
       - run: npm run build
 
-      - run: aws s3 sync dist/ s3://${{ secrets.AWS_S3_BUCKET_NAME }}/container/latest/
+      - run: aws s3 sync dist s3://${{ secrets.AWS_S3_BUCKET_NAME }}/container/latest
         env:
-          ACTIONS_ALLOW_UNSECURE_COMMANDS: true
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
